# eurydice

./: .aiignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test-gpu.yml  test.yml
docs/: tasks.md
src/eurydice/: __init__.py  client.py  config.py
src/eurydice/cache/: filesystem.py
src/eurydice/providers/: __init__.py  auto.py  embedded.py  orpheus_cpp.py  vllm.py
src/orpheus_tts/: __init__.py  client.py  config.py  exceptions.py  types.py
src/orpheus_tts/audio/: __init__.py  decoder.py  formats.py  tokens.py
src/orpheus_tts/cache/: __init__.py  base.py  filesystem.py  key.py  memory.py
src/orpheus_tts/providers/: __init__.py  base.py  lmstudio.py
tests/: __init__.py  conftest.py  test_types.py
tests/test_cache/: test_filesystem.py  test_memory.py
tests/test_providers/: test_auto.py  test_base.py  test_embedded.py  test_orpheus_cpp.py  test_vllm.py
