[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "orpheus-tts"
description = "Text-to-speech library using Orpheus TTS model with audio caching and provider abstraction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dynamic = ["version"]
authors = [
    { name = "Mustafa Abuelfadl", email="mustafa@zidan.me" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["tts", "text-to-speech", "orpheus", "audio", "speech-synthesis"]

dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
audio = [
    "torch>=2.10.0",
    "numpy>=2.4.1",
    "snac>=1.2.1",
]

embedded = [
    "orpheus-tts[audio]",
    "transformers>=4.57.6",
    "accelerate>=1.12.0",
]

dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.14",
]

all = [
    "orpheus-tts[audio,embedded,dev]",
]

[project.urls]
Homepage = "https://github.com/mustafazidan/orpheus-tts"
Repository = "https://github.com/mustafazidan/orpheus-tts"
Issues = "https://github.com/mustafazidan/orpheus-tts/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
