[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "eurydice-tts"
description = "Text-to-speech library bridging to Orpheus TTS model - bringing text to life"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
    { name = "Mustafa Abuelfadl", email = "mustafa@zidan.me" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["tts", "text-to-speech", "orpheus", "eurydice", "audio", "speech-synthesis", "ai", "ml"]

dependencies = [
    "httpx>=0.24.0",
    "numpy>=2.4.2",
]

[project.optional-dependencies]
audio = [
    "torch>=2.0.0",
    "numpy>=2.4.2",
    "snac>=1.2.0",
]

embedded = [
    "eurydice-tts[audio]",
    "transformers>=5.2.0",
    "accelerate>=1.12.0",
]

cpp = [
    "orpheus-cpp>=0.0.3",
    "numpy>=2.4.2",
]

vllm = [
    "orpheus-speech>=0.1.0",
]

dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

all-nocuda = [
    "eurydice-tts[audio,embedded,cpp,dev,docs]",
]

all-cuda = [
    "eurydice-tts[audio,embedded,cpp,vllm,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/mustafa-zidan/eurydice"
Documentation = "https://github.com/mustafa-zidan/eurydice#readme"
Repository = "https://github.com/mustafa-zidan/eurydice"
Issues = "https://github.com/mustafa-zidan/eurydice/issues"
Changelog = "https://github.com/mustafa-zidan/eurydice/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.2.0"

[tool.hatch.build.targets.wheel]
packages = ["src/eurydice"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
markers = [
    "cuda: marks tests that require a CUDA-enabled GPU (deselect with '-m not cuda')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["eurydice"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
